--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="flex flex-col md:flex-row justify-between items-center gap-4 mb-4">
                 <div class="text-center md:text-left">
                     <h1 class="text-2xl font-bold text-gray-900 tracking-tight">悉尼内西吃什么</h1>
-                    <p class="text-xs text-gray-500 font-medium tracking-wide uppercase mt-1">更多区域拓展中。关注小红书 @ian233 了解最新进展。</p>
+                    <p class="text-xs text-gray-500 font-medium tracking-wide uppercase mt-1">小红书 @ian233 </p>
                 </div>
                 
                 <div class="flex gap-3 w-full md:w-auto">
