--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>悉尼内西区美食全景 | Inner West Dining Guide</title>
+    <title>悉尼吃什么 | Sydney Dining Guide</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -24,7 +24,7 @@
             <div class="flex flex-col md:flex-row justify-between items-center gap-4 mb-4">
                 <div class="text-center md:text-left">
                     <h1 class="text-2xl font-bold text-gray-900 tracking-tight">今天去哪吃</h1>
-                    <p class="text-xs text-gray-500 font-medium tracking-wide uppercase mt-1">悉尼内西区美食指南</p>
+                    <p class="text-xs text-gray-500 font-medium tracking-wide uppercase mt-1">悉尼美食指南</p>
                 </div>
                 
                 <div class="flex gap-3 w-full md:w-auto">
