--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>悉尼吃什么 | Sydney Dining Guide</title>
+    <title>悉尼吃什么 | Sydney Eating Out</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/collapse@3.x.x/dist/cdn.min.js"></script>
@@ -30,7 +30,7 @@
                         <button @click="shareApp()" class="text-[11px] font-medium text-gray-500 hover:text-orange-600 flex items-center gap-1 transition-colors bg-white border border-gray-200 px-2 py-1 rounded-lg shadow-sm">
                             📤 分享
                         </button>
-                        <a href="mailto:your_email@example.com?subject=悉尼吃饭指南反馈" class="text-[11px] font-medium text-gray-500 hover:text-orange-600 flex items-center gap-1 transition-colors bg-white border border-gray-200 px-2 py-1 rounded-lg shadow-sm">
+                        <a href="mailto:caryxyf@gmail.com?subject=Feedback: Sydney Dining Guide" class="text-[11px] font-medium text-gray-500 hover:text-orange-600 flex items-center gap-1 transition-colors bg-white border border-gray-200 px-2 py-1 rounded-lg shadow-sm">
                             💬 反馈
                         </a>
                     </div>
@@ -52,7 +52,7 @@
             <div class="pb-1">
                 <div class="flex justify-between items-center py-2 cursor-pointer select-none border-t border-dashed border-gray-200 mt-2" @click="showFilters = !showFilters">
                     <span class="text-xs font-bold text-gray-400 uppercase tracking-wider flex items-center gap-2">
-                        <span>🎯 筛选条件</span>
+                        <span>筛选条件</span>
                         <span x-show="!showFilters && (activeSuburbs.length + activeCategories.length + activePrices.length + activeStars.length) > 0" 
                               class="bg-orange-100 text-orange-600 px-1.5 rounded-full text-[10px]" x-cloak>
                              已选 <span x-text="activeSuburbs.length + activeCategories.length + activePrices.length + activeStars.length"></span>
