--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <button @click="copyKeyword(randomResult?.name)" 
                         class="flex flex-col items-center justify-center py-4 hover:bg-red-50 hover:text-red-500 transition-colors group">
                     <span class="text-xl mb-1 group-hover:-translate-y-1 transition-transform">📕</span>
-                    <span class="text-xs font-bold text-gray-500 group-hover:text-red-500">复制书名</span>
+                    <span class="text-xs font-bold text-gray-500 group-hover:text-red-500">复制</span>
                 </button>
 
                 <a :href="randomResult ? 'https://www.google.com/maps/search/?api=1&query=' + encodeURIComponent(randomResult.name + ' ' + randomResult.suburb + ' Sydney') : '#'" 
@@ -276,7 +276,7 @@
                             <div class="flex items-center gap-2 shrink-0">
                                 <button @click.stop="copyKeyword(r.name)" 
                                         class="text-[10px] text-gray-400 hover:text-red-500 flex items-center gap-0.5 transition-colors border border-transparent hover:border-red-100 rounded px-1.5 py-1 hover:bg-red-50 cursor-pointer">
-                                    <span>📕</span> 搜书
+                                    <span>📕</span> 
                                 </button>
 
                                 <button @click.stop="reportError(r.id)" 
