--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <button @click="onlyGoodFood = !onlyGoodFood; currentPage = 1" 
                                     :class="onlyGoodFood ? 'bg-gray-900 text-amber-300 border-gray-900 ring-2 ring-amber-300/50' : 'bg-white text-gray-600 border-gray-200 hover:bg-gray-50'" 
                                     class="btn-transition px-3 py-1.5 rounded-full text-xs font-bold border flex items-center gap-1">
-                                <span>🏆 Good Food Guide 2026</span>
+                                <span>🏆 SMH Good Food 2026</span>
                             </button>
 
                             <div class="w-px h-4 bg-gray-200 mx-1"></div>
@@ -261,7 +261,7 @@
                          <div class="absolute bottom-0 left-0 right-0 h-10 bg-gradient-to-t from-black/5 to-transparent"></div>
                          
                          <div x-show="r.isGoodFood2026" class="absolute top-2 right-2 z-20 bg-gray-900/90 backdrop-blur border border-white/20 px-2 py-1 rounded shadow-lg flex items-center gap-1">
-                            <span class="text-[10px] font-bold text-gold tracking-wide">🏆 GOOD FOOD</span>
+                            <span class="text-[10px] font-bold text-gold tracking-wide">🏆 Good Food 2026</span>
                          </div>
                     </div>
 
