--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <button @click="onlyGoodFood = !onlyGoodFood; currentPage = 1" 
                                     :class="onlyGoodFood ? 'bg-gray-900 text-amber-300 border-gray-900 ring-2 ring-amber-300/50' : 'bg-white text-gray-600 border-gray-200 hover:bg-gray-50'" 
                                     class="btn-transition px-3 py-1.5 rounded-full text-xs font-bold border flex items-center gap-1">
-                                <span>🏆 SMH Good Food 2026</span>
+                                <span>🏆 SMH Good Food </span>
                             </button>
 
                             <div class="w-px h-4 bg-gray-200 mx-1"></div>
