--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
             <div class="flex flex-col md:flex-row justify-between items-center gap-4 mb-2">
                 <div class="text-center md:text-left">
                     <h1 class="text-xl font-bold text-gray-900 tracking-tight">悉尼吃什么 | Sydney Dining Guide</h1>
-                    <p class="text-xs text-gray-500 font-medium tracking-wide uppercase mt-1">美食荒漠指南</p>
                     
                     <div class="flex items-center justify-center md:justify-start gap-3 mt-3">
-                        <button @click="shareApp()" class="text-[11px] font-medium text-gray-500 hover:text-orange-600 flex items-center gap-1 transition-colors bg-white border border-gray-200 px-2 py-1 rounded-lg shadow-sm">
+                        <p class="text-xs text-gray-500 font-medium tracking-wide uppercase mt-1">美食荒漠吃饭指南 </p>
+
+                        <button @click="shareApp()" class="text-[9px] font-medium text-gray-500 hover:text-orange-600 flex items-center gap-1 transition-colors bg-white border border-gray-200 px-2 py-1 rounded-lg shadow-sm">
                             📤 分享
                         </button>
-                        <a href="mailto:yanghao9397@gmail.com?subject=Feedback" class="text-[11px] font-medium text-gray-500 hover:text-orange-600 flex items-center gap-1 transition-colors bg-white border border-gray-200 px-2 py-1 rounded-lg shadow-sm">
+                        <a href="mailto:yanghao9397@gmail.com?subject=Feedback" class="text-[9px] font-medium text-gray-500 hover:text-orange-600 flex items-center gap-1 transition-colors bg-white border border-gray-200 px-2 py-1 rounded-lg shadow-sm">
                             💬 反馈
                         </a>
                     </div>
