--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 <div class="w-px h-4 bg-gray-200 mx-1"></div>
 
-<span class="text-xs font-bold text-gray-400 mx-1 select-none">智能推荐：</span>
+<span class="text-xs font-bold text-gray-400 mx-1 select-none">AI推荐：</span>
                             
                             <button @click="toggleFilter('activeStars', 3)" :class="activeStars.includes(3) ? 'bg-yellow-500 text-white border-yellow-500' : 'bg-white text-gray-600 border-gray-200 hover:bg-yellow-50'" class="btn-transition px-4 py-1.5 rounded-full text-xs font-medium border">⭐⭐⭐</button>
                             <button @click="toggleFilter('activeStars', 2)" :class="activeStars.includes(2) ? 'bg-yellow-500 text-white border-yellow-500' : 'bg-white text-gray-600 border-gray-200 hover:bg-yellow-50'" class="btn-transition px-4 py-1.5 rounded-full text-xs font-medium border">⭐⭐</button>
