--- a/index.html
+++ b/index.html
@@ -218,12 +218,19 @@
                     <span class="text-[10px] font-bold text-gray-900 group-hover:text-green-600">导航</span>
                 </a>
 
-                <div class="flex justify-center items-center -mt-6"> <button @click="pickRandom()" 
-                        class="w-14 h-14 rounded-full bg-gray-900 text-white shadow-xl hover:shadow-orange-500/40 hover:bg-orange-600 border-4 border-gray-50 flex flex-col items-center justify-center transition-all duration-300 transform hover:scale-110 hover:rotate-180">
-                        <span class="text-xl">🎲</span>
-                        <span class="text-[9px] font-bold mt-0.5">再选</span>
-                    </button>
-                </div>
+<div class="flex justify-center items-center -mt-8 relative z-10">
+    <button @click="pickRandom()" 
+            class="w-16 h-16 rounded-full border-[6px] border-gray-50 
+                   bg-gradient-to-br from-gray-800 via-gray-900 to-black 
+                   text-white shadow-lg shadow-gray-400/50 
+                   hover:shadow-orange-500/40 hover:from-gray-900 hover:to-gray-800
+                   active:scale-95 active:shadow-inner
+                   flex flex-col items-center justify-center 
+                   transition-all duration-300 transform group">
+        <span class="text-2xl mb-0.5 group-hover:-translate-y-0.5 transition-transform duration-300">🎲</span>
+        <span class="text-[10px] font-medium tracking-widest text-gray-300 group-hover:text-white transition-colors">刷新</span>
+    </button>
+</div>
                 
                 <button @click="copyKeyword(randomResult?.name)" 
                         class="flex flex-col items-center justify-center py-2 hover:bg-red-50 hover:text-red-500 transition-colors group rounded-lg mx-1">
