--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                             </div>
 
                             <div x-show="randomResult?.goodFoodValue" class="flex items-center gap-1 bg-black text-amber-400 px-2 py-1 rounded shadow-sm shrink-0">
-                                <span class="text-[10px] font-black" x-text="'🏆'></span>
+                                <span class="text-[10px] font-black" x-text="'🏆'"></span>
                             </div>
 
                             <div x-show="randomResult?.isTrend" class="flex items-center gap-1 bg-red-600 text-white px-2 py-1 rounded shadow-sm shrink-0">
